--- a/source/group44/resources/application.css
+++ b/source/group44/resources/application.css
@@ -68,6 +68,13 @@
     -fx-pref-width: 200;
 }
 
+#onScreenMessage{
+    -fx-font-family: "Arial";
+    -fx-font-size: 13pt;
+    -fx-text-fill: red;
+    -fx-font-weight: bold;
+}
+
 #tokensTitle{
     -fx-font-weight: bold;
     -fx-font-family: "Helvetica";
