--- a/source/group44/game/layouts/LevelEditor.fxml
+++ b/source/group44/game/layouts/LevelEditor.fxml
@@ -20,6 +20,7 @@
                 <TextField fx:id="widthInput" alignment="CENTER" maxHeight="30.0" maxWidth="100.0" text="Columns:" />
                 <Button fx:id="confirm" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" text="Confirm" />
                 <Button fx:id="save" alignment="CENTER" contentDisplay="CENTER" disable="true" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" text="Save Level" />
+                <Button fx:id="cancel" alignment="CENTER" contentDisplay="CENTER" disable="false" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" text="Cancel" />
                 <GridPane fx:id="container" hgap="20.0" vgap="40.0">
                     <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
