--- a/source/group44/game/layouts/MainGameWindow.fxml
+++ b/source/group44/game/layouts/MainGameWindow.fxml
@@ -2,42 +2,48 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.canvas.Canvas?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<StackPane id="pane" fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-           stylesheets="@/group44/resources/application.css" prefHeight="600.0" prefWidth="800.0"
-           xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1"
-           fx:controller="group44.game.layoutControllers.MainGameWindowController">
-   <children>
-      <Canvas fx:id="canvas" height="550.0" width="725.0" StackPane.alignment="CENTER" />
-      <Pane fx:id="movableObjects" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-            stylesheets="@/group44/resources/application.css" prefHeight="550.0" prefWidth="725.0"/>
-       <Label id="timeTitle" text="Time Taken:" prefHeight="100" prefWidth="90" StackPane.alignment="CENTER_RIGHT"
-              alignment="CENTER">
-           <StackPane.margin>
-               <Insets bottom="80.0" left="0.0" right="25.0" top="0.0"/>
-           </StackPane.margin>
-       </Label>
-       <Label id="timer" fx:id="timeLabel" text="Testing Stopwatch" prefHeight="50" prefWidth="90"
-              StackPane.alignment="CENTER_RIGHT" alignment="CENTER">
-           <StackPane.margin>
-               <Insets bottom="0.0" left="0.0" right="25.0" top="0.0"/>
-           </StackPane.margin>
-       </Label>
-      <VBox id="menuBox" fx:id="menuBox" alignment="CENTER" fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity"
-            stylesheets="@/group44/resources/application.css" minHeight="-Infinity" minWidth="-Infinity"
-            prefHeight="300.0" prefWidth="200.0" spacing="10" StackPane.alignment="CENTER">
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+
+<StackPane id="pane" fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@/group44/resources/application.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group44.game.layoutControllers.MainGameWindowController">
+    <children>
+        <Canvas fx:id="canvas" height="550.0" width="725.0" StackPane.alignment="CENTER" />
+        <Pane fx:id="movableObjects" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="725.0" stylesheets="@/group44/resources/application.css">
          <children>
-            <Button id="button" fx:id="homeButton" mnemonicParsing="false" prefHeight="50"
-                    stylesheets="@/group44/resources/application.css" prefWidth="90" text="Home" wrapText="false"/>
-            <Button id="button" fx:id="restartButton" mnemonicParsing="false" prefHeight="50"
-                    stylesheets="@/group44/resources/application.css" prefWidth="90" text="Restart" wrapText="false"/>
-            <Button id="button" fx:id="resumeButton" mnemonicParsing="false" prefHeight="50"
-                    stylesheets="@/group44/resources/application.css" prefWidth="90" text="Resume"
-                    textAlignment="CENTER" wrapText="false"/>
-         </children>
-         <StackPane.margin>
-            <Insets />
-         </StackPane.margin></VBox>
-   </children>
+            <Label id="onScreenMessage" fx:id="onScreenMessage" alignment="CENTER" layoutX="593.0" layoutY="5.0" prefHeight="175.0" prefWidth="118.0" text="onScreenMessage" textAlignment="CENTER" wrapText="true" />
+         </children></Pane>
+        <Label id="tokensTitle" alignment="TOP_CENTER" prefHeight="18.0" prefWidth="90" text="Tokens: " StackPane.alignment="CENTER_RIGHT">
+            <StackPane.margin>
+                <Insets bottom="200.0" left="0.0" right="25.0" top="25.0" />
+            </StackPane.margin>
+        </Label>
+        <Label id="tokenAmount" fx:id="tokenAmount" alignment="TOP_CENTER" prefHeight="20.0" prefWidth="90" text="0" StackPane.alignment="CENTER_RIGHT">
+            <StackPane.margin>
+                <Insets bottom="170.0" left="0.0" right="25.0" top="25.0" />
+            </StackPane.margin>
+        </Label>
+        <VBox id="menuBox" fx:id="menuBox" alignment="CENTER" fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="200.0" spacing="10" stylesheets="@/group44/resources/application.css" StackPane.alignment="CENTER">
+            <children>
+                <Button id="button" fx:id="homeButton" mnemonicParsing="false" prefHeight="50" prefWidth="90" stylesheets="@/group44/resources/application.css" text="Home" wrapText="false" />
+                <Button id="button" fx:id="restartButton" mnemonicParsing="false" prefHeight="50" prefWidth="90" stylesheets="@/group44/resources/application.css" text="Restart" wrapText="false" />
+                <Button id="button" fx:id="resumeButton" mnemonicParsing="false" prefHeight="50" prefWidth="90" stylesheets="@/group44/resources/application.css" text="Resume" textAlignment="CENTER" wrapText="false" />
+            </children>
+            <StackPane.margin>
+                <Insets />
+            </StackPane.margin>
+        </VBox>
+        <Label id="timeTitle" alignment="CENTER" prefHeight="100" prefWidth="90" text="Time Taken:" StackPane.alignment="CENTER_RIGHT">
+            <StackPane.margin>
+                <Insets bottom="80.0" left="0.0" right="25.0" top="0.0" />
+            </StackPane.margin>
+        </Label>
+        <Label id="timer" fx:id="timeLabel" alignment="CENTER" prefHeight="50" prefWidth="90" text="Testing Stopwatch" StackPane.alignment="CENTER_RIGHT">
+            <StackPane.margin>
+                <Insets bottom="0.0" left="0.0" right="25.0" top="0.0" />
+            </StackPane.margin>
+        </Label>
+    </children>
 </StackPane>
