--- a/source/group44/resources/application.css
+++ b/source/group44/resources/application.css
@@ -1,4 +1,4 @@
-#root{
+#root {
     -fx-background-image: url("../resources/background.png");
     -fx-background-size: 800 600;
     -fx-max-height: 100%;
@@ -7,14 +7,14 @@
 
 }
 
-#motd{
+#motd {
     -fx-font-family: "Helvetica";
     -fx-font-size: 12pt;
     -fx-font-weight: bold;
     -fx-position: center;
 }
 
-#title{
+#title {
     -fx-underline: true;
     -fx-font-size: 20pt;
     -fx-font-family: "Helvetica";
@@ -22,44 +22,44 @@
     -fx-font-weight: bold;
 }
 
-.button{
+.button {
     -fx-background-image: url("../resources/Buttons/green_button1.png");
     -fx-pref-width: 130px;
     -fx-pref-height: 65px;
     -fx-background-size: cover;
     -fx-background-color: transparent;
     -fx-background-position: center center;
-    -fx-font-family:"Simpsonfont";
+    -fx-font-family: "Simpsonfont";
 }
 
-.button:hover{
+.button:hover {
     -fx-background-image: url("../resources/Buttons/orange_button1.png");
     -fx-pref-width: 130px;
     -fx-pref-height: 65px;
     -fx-background-size: cover;
     -fx-background-color: transparent;
     -fx-background-position: center center;
-    -fx-font-family:"Simpsonfont";
+    -fx-font-family: "Simpsonfont";
 }
 
-.button:pressed{
+.button:pressed {
     -fx-background-image: url("../resources/Buttons/orange_button1.png");
     -fx-pref-width: 120px;
     -fx-pref-height: 65px;
     -fx-background-size: cover;
     -fx-background-color: transparent;
     -fx-background-position: center center;
-    -fx-font-family:"Simpsonfont";
+    -fx-font-family: "Simpsonfont";
 }
 
-#menuBox{
+#menuBox {
     -fx-background-image: url("../resources/menuContainer.png");
     -fx-background-size: cover;
     -fx-pref-height: 300;
     -fx-pref-width: 200;
 }
 
-#logo{
+#logo {
     -fx-background-image: url("../resources/KitchenCatastrophe.png");
     -fx-background-size: cover;
     -fx-width: 100;
@@ -68,12 +68,24 @@
     -fx-pref-width: 200;
 }
 
-#timeTitle{
+#onScreenMessage {
+    -fx-font-family: "Arial";
+    -fx-font-size: 13pt;
+    -fx-text-fill: red;
+    -fx-font-weight: bold;
+}
+
+#tokensTitle {
     -fx-font-weight: bold;
     -fx-font-family: "Helvetica";
 }
 
-#timer{
+#timeTitle {
+    -fx-font-weight: bold;
+    -fx-font-family: "Helvetica";
+}
+
+#timer {
     -fx-background-radius: 10;
     -fx-border-radius: 10;
     -fx-border-color: black;
