--- a/source/group44/game/layouts/MiniGameWindow.fxml
+++ b/source/group44/game/layouts/MiniGameWindow.fxml
@@ -9,7 +9,7 @@
     <children>
         <BorderPane id="gameGrid" fx:id="gameGrid" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="573.0" prefWidth="778.0" StackPane.alignment="CENTER">
             <top>
-                <Label id="minigameInstructions" text="Use the arrow keys and 'Enter' to select burger ingredients from top to bottom!" wrapText="true" BorderPane.alignment="TOP_CENTER" />
+                <Label id="minigameInstructions" text="Use the arrow keys and 'Enter' to select burger ingredients from top to bottom!" textAlignment="CENTER" wrapText="true" BorderPane.alignment="TOP_CENTER" />
             </top>
             <left>
 
@@ -18,15 +18,16 @@
                 <VBox id="burgerSelect" fx:id="burgerSelect" alignment="CENTER" fillWidth="false" spacing="25.0" BorderPane.alignment="CENTER" StackPane.alignment="CENTER" />
             </center>
             <right>
-                <VBox id="rightSideMenu" fx:id="rightSideMenu" alignment="CENTER" fillWidth="false" prefHeight="503.0" prefWidth="123.0" BorderPane.alignment="CENTER">
-                    <Label id="OrderText" alignment="CENTER" text="Assembly Order:" wrapText="true" BorderPane.alignment="CENTER" />
-                    <ImageView fitHeight="75.0" fitWidth="75.0" preserveRatio="true">
+                <VBox id="rightSideMenu" fx:id="rightSideMenu" alignment="CENTER" fillWidth="false" prefHeight="377.0" prefWidth="123.0" BorderPane.alignment="CENTER">
+                    <Label id="Explanation" alignment="CENTER" prefHeight="101.0" prefWidth="123.0" text="That pesky waiter can't tell you're busy! Get this order out quick!" textAlignment="CENTER" wrapText="true" />
+                    <Label id="OrderText" alignment="CENTER" prefHeight="50.0" prefWidth="87.0" text="Assembly Order:" textAlignment="CENTER" wrapText="true" BorderPane.alignment="CENTER" />
+                    <ImageView fitHeight="143.0" fitWidth="100.0" preserveRatio="true">
                         <image>
                             <Image url="@../../resources/minigame/burgerComplete.png" />
                         </image>
                     </ImageView>
-                    <Label id="Reminder" alignment="CENTER" text="The timer's still going!" wrapText="true" BorderPane.alignment="CENTER" />
-                    <Label id="timeTitle" alignment="CENTER" prefHeight="28.0" prefWidth="74.0" text="Time Taken:" textAlignment="CENTER" StackPane.alignment="CENTER_RIGHT">
+                    <Label id="Reminder" alignment="CENTER" prefHeight="141.0" prefWidth="117.0" text="The timer's still going!" textAlignment="CENTER" wrapText="true" BorderPane.alignment="CENTER" />
+                    <Label id="timeTitle" alignment="CENTER" prefHeight="32.0" prefWidth="74.0" text="Time Taken:" textAlignment="CENTER" StackPane.alignment="CENTER_RIGHT">
                         <StackPane.margin>
                             <Insets bottom="400.0" left="0.0" right="25.0" top="0.0" />
                         </StackPane.margin>
